--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
             flex-direction: column;
             align-items: center;
         }
+        a {
+            text-decoration: none;
+        }
         li {
+            margin-bottom: 5px;
+            padding: 5px;
             list-style: none;
+        }
+        li:hover {
+            background-color: #F7DF1E;
+            color: #FFFFFF;
+            border-radius: 10px;
         }
     </style>
 </head>
@@ -22,6 +32,7 @@
         <ul>
             <a href="semana-01/index.html"><li>Semana 01</li></a>
             <a href="semana-02/index.html"><li>Semana 02</li></a>
+            <a href="semana-03/index.html"><li>Semana 03</li></a>
         </ul>
     </div>
 </body>
