feat: add semana-04

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <a href="semana-01/index.html"><li>Semana 01</li></a>
             <a href="semana-02/index.html"><li>Semana 02</li></a>
             <a href="semana-03/index.html"><li>Semana 03</li></a>
+            <a href="semana-04/index.html"><li>Semana 04</li></a>
         </ul>
     </div>
 </body>
