--- a/semana-04/index.html
+++ b/semana-04/index.html
@@ -42,6 +42,10 @@
                 <input class="form-control" type="tel" id="telefone-celular" required>
             </div>
             <div class="mb-3">
+                <label class="form-label" for="matricula">Digite sua matricula:</label>
+                <input class="form-control" type="text" id="matricula" required>
+            </div>
+            <div class="mb-3">
             <label>Identifique-se:</label>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" id="aluno" name="person-type" value="aluno" onclick="changePersonType()" required>
