--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <a href="semana-02/index.html"><li>Semana 02</li></a>
             <a href="semana-03/index.html"><li>Semana 03</li></a>
             <a href="semana-04/index.html"><li>Semana 04</li></a>
+            <a href="semana-05/index.html"><li>Semana 05</li></a>
         </ul>
     </div>
 </body>
