feat: add semana-06

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <a href="semana-03/index.html"><li>Semana 03</li></a>
             <a href="semana-04/index.html"><li>Semana 04</li></a>
             <a href="semana-05/index.html"><li>Semana 05</li></a>
+            <a href="semana-06/index.html"><li>Semana 06</li></a>
         </ul>
     </div>
 </body>
