feat: add semana-07

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a href="semana-04/index.html"><li>Semana 04</li></a>
             <a href="semana-05/index.html"><li>Semana 05</li></a>
             <a href="semana-06/index.html"><li>Semana 06</li></a>
+            <a href="semana-07/index.html"><li>Semana 07</li></a>
         </ul>
     </div>
 </body>
